<resources>
    <string name="app_name">LoL Stats</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="search_edit_field_hint">Username</string>
    <string name="welcome_text">Welcome to the App! Please go ahead and search for username to get some cool stats!</string>
    <string name="wins">Wins</string>
    <string name="losses">Losses</string>
    <string name="hyphen"> - </string>
    <string name="no_user_found_title">No User Found</string>
    <string name="no_user_found_message"><![CDATA[User <b>%s</b> was not found. Please try a valid user or a different region.]]></string>
    <string name="general_error_title">Generic Error</string>
    <string name="general_error_body">A generic error has occured, please try again</string>
    <string name="accessibility_summary_image_icon">User\'s icon</string>
    <string name="summary_hint_default">*5v5 ranked stats are shown above</string>
    <string name="no_record_found_title">No Games Found</string>
    <string name="no_record_found_body">No games found for this account.</string>
    <string name="most_played_champs_title">Most Played Champions</string>
    <string name="most_played_champs_view_more">View Full List</string>
    <string name="most_played_champs_no_found">No Champion History Found</string>
    <string name="match_history_title">Recent Match History</string>
    <string name="match_history_view_more_text">View Full Recent Matches</string>
    <string name="win_percentage">Win %</string>
    <string name="top_champions">Top Challenger Players</string>
    <string name="no_challengers_found">No Challenger Players Found</string>
    <string name="view_all_challengers">View All Challengers</string>
    <string name="challenger_title">Top Ranked Challengers</string>
    <string name="accessibility_hot_streak">hot streak</string>
    <string name="accessibility_new_player">new player</string>
    <string name="accessibility_veteran">veteran</string>
    <string name="accessibility_next">click nywhere to continue</string>
    <string name="overflow_sort">Sort</string>
    <string name="overflow_filter">Filter</string>
    <string name="menu_sort_by_points">By Points</string>
    <string name="menu_sort_by_wins">By Wins</string>
    <string name="menu_sort_by_win_p">Win %</string>
    <string name="menu_sort_by_losses">By Losses</string>
    <string name="match_label_team">Team</string>
    <string name="match_label_kda">K/D/A</string>
    <string name="match_label_towers">Towers</string>
    <string name="match_label_dragons">Dragons</string>
    <string name="match_label_barons">Barons</string>
    <string name="match_label_win">Win</string>
    <string name="match_label_gold">Gold</string>
    <string name="match_team_stats_layout">Match Team Statistics</string>
    <string name="match_team_stats_middle">Match Individual Statistics</string>
    <string name="match_creep_per_ten_title">Creep Score Per Ten Minute</string>
    <string name="match_cs_per_ten_diff">Creep Score Per Ten vs Opponent</string>
    <string name="match_xp_per_ten_diff">XP Gained Per Ten vs Opponent</string>
    <string name="top_champions_title">Most Played Champions</string>
    <string name="menu_sort_by_games">Games</string>
    <string name="no_favorite_players_added_yet">No Favorite players chosen yet</string>
    <string name="favorite_payer_title">Favorite Summoners</string>
    <string name="view_all_favorites">View All Favorite Summoners</string>
    <string name="menu_sort_by_alphabetical">Alphabetical</string>
    <string name="menu_sort_by_date_added">Date Updated</string>
    <string name="featured_games_error">No Featured Games Not Found</string>
    <string name="featured_games_title">Featured Games</string>
    <string name="view_all_featured_games">View More Featured Games</string>
    <string name="observable_game_pick">Picks</string>
    <string name="observable_game_bans">Bans</string>
    <string name="observable_game_blue_team">Blue Team</string>
    <string name="observable_game_red_team">Red Team</string>
    <string name="settings_main_header">General Settings</string>
    <string name="settings_champion_header">My Summoner Settings</string>
    <string name="summoner_name">Summoner Name</string>
    <string name="nav_summoner_text_not_found">No Summoner.</string>
    <string name="nav_summoner_text_not_found_2">Go To Settings.</string>
    <string name="nav_welcome_back">Welcome back to Lol Stats</string>
    <string name="observable_game_title">Players</string>
    <string name="accessibility_summoner_icon">summoner icon</string>
    <string name="my_summoner_title">My Summoner</string>
    <string name="my_summoner_no_summoners_added_yet">No summoner added yet. Please go to \'Settings\' to add a summoner</string>
    <string name="ranked_kills">Kills</string>
    <string name="ranked_deaths">Deaths</string>
    <string name="ranked_assists">Assists</string>
    <string name="ranked_kda">KDA</string>
    <string name="my_summoner_no_ranked_stats">No Ranked Stats found for this season. Please play some games, then this will be updated.</string>
    <string name="my_summoner_note">*Stats above are the reflection of the most recent season selected</string>
    <string name="my_summoner_favorite_champions">Favorite Champions</string>
    <string name="accessibility_champion_icon">Champion Icon</string>
    <string name="match_color_description">*Colors indicate performance vs the rest of the players</string>
    <string name="great">Great</string>
    <string name="bad">Bad</string>
    <string name="average">Average</string>
    <string name="good">Good</string>
    <string name="error_loading_players">Error loading players. Please try another game.</string>
    <string name="observable_check_for_game_text">To view if the summoner is currently in a game please swipe to refresh</string>
    <string name="observable_button_check">Check For Game</string>
    <string name="observable_game_title_summoner_stats">Current Game</string>
    <string name="fragment_title_summoner_stats">Summoner Stats</string>
    <string name="fragment_title_ranked_stats">Ranked Stats</string>
    <string name="fragment_title_observable_game">Current Game</string>
    <string name="fragment_title_favorites">Favorite Summoners</string>
    <string name="fragment_title_highest_ranked">Summoner Ranks</string>
    <string name="fragment_title_match_stats">Match Statistics</string>
    <string name="fragment_title_featured_games">Featured Games</string>
    <string name="fragment_title_settings">Settings</string>
    <string name="fragment_title_match_history">Recent Matches</string>
    <string name="division_rank_title">Division</string>

    <string name="lol_agreement">LoL Stats isn\'t endorsed by Riot Games and doesn\'t reflect the views or opinions of Riot Games or anyone officially involved in producing or managing League of Legends. League of Legends and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League of Legends © Riot Games, Inc.</string>
    <string name="lol_agreement_full">For full terms please visit <a href="https://developer.riotgames.com/terms#statement">League of Legends Term</a></string>
    <string name="about_special_thanks">Special Thanks to the following libraries that are used in this app:</string>
    <string name="about_ok_http">OkHttp</string>
    <string name="about_gson">Gson</string>
    <string name="about_material_ripple">com.balysv:material-ripple</string>
    <string name="about_ok_sugar">Sugar</string>
    <string name="apache_agreenment">Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at     http://www.apache.org/licenses/LICENSE-2.0  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="about_about_title">About This App</string>
    <string name="match_team_message">Press and Hold on a Summoner for more data</string>
</resources>
