<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:match_per_ten="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingEnd="@dimen/activity_horizontal_margin"
              android:paddingStart="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin_small"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/summoner_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"/>

    </LinearLayout>

    <include
        layout="@layout/partial_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <com.github.koshkin.leagueoflegendsstats.views.HorizontalBarStatView
        android:id="@+id/kda_chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_small"
        match_per_ten:barChartTitle="KDA"/>

    <com.github.koshkin.leagueoflegendsstats.views.HorizontalBarStatView
        android:id="@+id/damage_chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        match_per_ten:barChartTitle="Damage"/>

    <com.github.koshkin.leagueoflegendsstats.views.HorizontalBarStatView
        android:id="@+id/gold_chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        match_per_ten:barChartTitle="Gold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_small"
        android:orientation="vertical"
        >

        <com.github.koshkin.leagueoflegendsstats.views.MatchPerTenView
            android:id="@+id/match_cs_diff_per_ten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin_small"
            match_per_ten:matchPerTenTitle="@string/match_cs_per_ten_diff"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin_small"
        android:layout_marginTop="@dimen/activity_vertical_margin_small"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/match_color_description"
            android:textAlignment="textEnd"
            android:textSize="@dimen/text_size_xsmall"
            android:textStyle="italic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin_xsmall"
                android:layout_marginStart="@dimen/activity_horizontal_margin_xsmall"
                android:text="@string/great"
                android:textColor="@color/great"
                android:textSize="@dimen/text_size_xsmall"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin_xsmall"
                android:layout_marginStart="@dimen/activity_horizontal_margin_xsmall"
                android:text="@string/good"
                android:textColor="@color/good"
                android:textSize="@dimen/text_size_xsmall"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin_xsmall"
                android:layout_marginStart="@dimen/activity_horizontal_margin_xsmall"
                android:text="@string/average"
                android:textColor="@color/average"
                android:textSize="@dimen/text_size_xsmall"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin_xsmall"
                android:layout_marginStart="@dimen/activity_horizontal_margin_xsmall"
                android:text="@string/bad"
                android:textColor="@color/bad"
                android:textSize="@dimen/text_size_xsmall"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>