<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/most_champions_layout"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="@dimen/activity_vertical_margin_small"
              android:background="@android:color/white"
              android:elevation="@dimen/medium_elevation"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/most_played_champs_title"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"/>

    <include
        layout="@layout/partial_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/activity_vertical_margin_small"/>

    <LinearLayout
        android:id="@+id/champion_list_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:orientation="vertical"/>

    <TextView
        android:id="@+id/champion_no_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/most_played_champs_no_found"
        android:textAlignment="center"
        android:textStyle="italic"/>

    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/champion_view_full_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/most_played_champs_view_more"
                android:textColor="@color/colorAccent"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_chevron_right_black_24dp"/>

        </LinearLayout>

    </com.balysv.materialripple.MaterialRippleLayout>

</LinearLayout>